--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.0.0",
     "@next/font": "^13.1.6",
     "@tanstack/react-query": "^4.24.10",
     "@tanstack/react-query-devtools": "^4.24.12",
+    "axios": "^1.3.4",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^8.0.5",
     "zod": "^3.20.2"
