--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
     "@hookform/resolvers": "^3.0.0",
     "@next/font": "^13.1.6",
     "@tanstack/react-query": "^4.24.10",
@@ -19,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^8.0.5",
     "zod": "^3.20.2"
