--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@
 # NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
 
-# Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+# Next Auth GitHub Provider
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
+
+# Repo to track issues
+NEXT_PUBLIC_REPO_OWNER="BaBa0525"
+NEXT_PUBLIC_REPO_NAME="issue-manager"
