--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@tanstack/react-query": "^4.24.10",
     "@tanstack/react-query-devtools": "^4.24.12",
     "axios": "^1.3.4",
+    "csstype": "^3.0.10",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^8.0.5",
